k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: mi-aplicacion.dominio.com
    http:
      paths:
      - path: /operation-quasar
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8089
